install/remove apache and php playbooks created by admin 1

--- a/install_apache.yml
+++ b/install_apache.yml
@@ -1,5 +1,4 @@
 ---
- 
  - hosts: all
    become: true
    tasks:
@@ -11,7 +10,9 @@
    - name: install apache2 package
      apt:
        name: apache2
+       state: latest
  
    - name: add php support for apache
      apt:
        name: libapache2-mod-php
+       state: latest
