--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,37 +4,38 @@
    become: true
    tasks:
  
-   - name: update repository index
+   - name: install packages Ubuntu
      apt:
+       name:
+         - apache2
+         - libapache2-mod-php
+       state: latest
        update_cache: yes
      when: ansible_distribution == "Ubuntu"
-   - name: install apache2 package
-     apt:
-       name: apache2
-       state: latest
-     when: ansible_distribution == "Ubuntu"
  
-   - name: add php support for apache
-     apt:
-       name: libapache2-mod-php
-       state: latest
-     when: ansible_distribution == "Ubuntu"
- 
-   - name: update repository index
+   - name: install packages AlmaLinux
      dnf:
+       name:
+         - httpd
+         - php
+       state: latest
        update_cache: yes
      when: ansible_distribution == "AlmaLinux"
+   - hosts: db_servers
+   become: true
+   tasks:
  
-   - name: install httpd package
+   - name: install Database package (AlmaLinux)
      dnf:
-       name: httpd
+       name: mariadb
        state: latest
      when: ansible_distribution == "AlmaLinux"
  
-   - name: add php support for apache
-     dnf:
-       name: php
+   - name: install mariadb server
+     apt:
+       name: mariadb-server
        state: latest
-     when: ansible_distribution == "AlmaLinux"
+     when: ansible_distribution == "Ubuntu"
+
 
 
